<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >
    
    <LinearLayout
        android:orientation="vertical"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		>
   		
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
   		   	>
   		   	
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/longitude"
                />
   		   		
    		<TextView
     			android:id="@+id/longitude"
     			android:layout_width="wrap_content"
     			android:layout_height="fill_parent"
     			android:text="@string/value0"
     			android:minEms="5"
  				/>
    		
    		<TextView 
    		    android:layout_width="wrap_content"
    		    android:layout_height="fill_parent"
    		    android:text="@string/latitude"
    		    android:layout_marginLeft="5dp"
    		    />
    		
  			<TextView
   				android:id="@+id/latitude"
   				android:layout_width="wrap_content"
    			android:layout_height="fill_parent"
    			android:text="@string/value0"
    			android:minEms="5"
  				/>
  			
  			</LinearLayout>
  			
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
  			
  			<TextView
  			    android:layout_height="fill_parent"
  			    android:layout_width="wrap_content"
  			    android:text="@string/radiation"
  			    />
  			
            <TextView
                android:id="@+id/rad_level_map"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/value0"
                android:minEms="5"
                />
         </LinearLayout>
           	  	
    </LinearLayout>
    
<com.google.android.maps.MapView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mapview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:apiKey="06mV0IU3ul_iDyyxJcSYtZsv92MqyxojCKVnlMw"
    />   

</LinearLayout>
