<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/radiation"
            android:textSize="25dp"
            tools:context=".MainActivity" />

        <TextView
            android:id="@+id/textRad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/value0"
            android:textSize="25dp"
            android:minEms="5"
            tools:context=".MainActivity" />

    </LinearLayout>
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/texto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/value0"
            android:minEms="5"
            tools:context=".MainActivity" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cargaMapa"
            android:text="@string/map_string" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:inputType="number"
            android:text="@string/value0"
             >
        </EditText>

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="change_period"
            android:enabled="false"            
            android:text="@string/update_time" />

    </LinearLayout>
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
     
     <TextView
         android:id="@+id/texto2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:text="@string/value0"
         android:minEms="5"
         tools:context=".MainActivity" />
    
     <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_string"
        android:id="@+id/bGuardar"
        android:onClick="guardarHistograma"
        />
                    
    </LinearLayout>


    
    <!-- linear layout used to place the energy plot -->
   <LinearLayout
       android:id="@+id/layout1"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"      
        >
      
	</LinearLayout>


</LinearLayout>
